--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ html, body {
 body, html {
     height: 100%;
     margin: 0;
-    background-color: black;
+    background-color: #002e3c;
     padding: 0;
     overflow: hidden;
 }
@@ -18,11 +18,9 @@ body, html {
     position: fixed;
     top: 0;
     left: 0;
-    background-image: url('assets/index.png');
-    width: 100%;
+     width: 100%;
     height: 100%;
-    background-position: center;
-    background-repeat: no-repeat;
+    
     display: flex;
     justify-content: center;
     align-items: center;
@@ -168,10 +166,7 @@ canvas, #game {
 
 #intro-container {
   font-family: 'Arial', sans-serif;
-  background-image: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.9)), 
-                    url('assets/background.png');
-  background-size: cover;
-  background-position: center;
+  
   transition: opacity 1s ease-out;
 }
 
