--- a/resume.css
+++ b/resume.css
@@ -125,8 +125,8 @@ a {
 .badge {
     display: inline-block;
     padding: 0.25rem 0.75rem;
-    background-color: #dcfce7;
-    color: #002e3c;
+    background-color: #002e3c;
+    color: #ffffff;
     border-radius: 9999px;
     font-size: 0.875rem;
     font-weight: 500;
@@ -219,24 +219,16 @@ header {
     position: relative;
 }
 
-.image-frame::before {
-    content: '';
-    position: absolute;
-    top: 1rem;
-    left: 1rem;
-    width: 100%;
-    height: 100%;
-    background-color: #002e3c;
-    z-index: -1;
-}
+
 
 .image-frame img {
     width: 320px;
     height: 320px;
     object-fit: cover;
-    border: 2px solid #333;
+    border: 4px solid #333;
     position: relative;
     z-index: 1;
+    border-radius: 50%;
 }
 
 /* Stats Section */
